--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
   }
-}
+  .lds-ellipsis div {
+    position: absolute;
+    top: 33px;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: #fff;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  }
+  .lds-ellipsis div:nth-child(1) {
+    left: 8px;
+    animation: lds-ellipsis1 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(2) {
+    left: 8px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(3) {
+    left: 32px;
+    animation: lds-ellipsis2 0.6s infinite;
+  }
+  .lds-ellipsis div:nth-child(4) {
+    left: 56px;
+    animation: lds-ellipsis3 0.6s infinite;
+  }
+  @keyframes lds-ellipsis1 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  @keyframes lds-ellipsis3 {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
+  @keyframes lds-ellipsis2 {
+    0% {
+      transform: translate(0, 0);
+    }
+    100% {
+      transform: translate(24px, 0);
+    }
+  }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  h1{
+    font-family: 'Rowdies', sans-serif;
+    text-transform: uppercase;
+    color: #3F2305;
+    text-shadow: #fff;
+    
+  }
+  
+.container{
+  display: flex;
+  justify-content: center;
+}
+.description{
+  display: flex;
+  justify-content: center;
+  padding: 4%;
+  margin: 2%;
+  font-family: 'Rowdies', sans-serif;
+  background-color: rgba(246, 229, 174, 0.5);
+}
+.nutritionLabel{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5%;
+  padding: 2%;
+  font-family: 'Rowdies', sans-serif;
+  font-size: 0.8em;
+  background-color: rgba(242, 248, 239, 0.5);
+  text-decoration: underline;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.search {
+  width: 100%;
+  padding: 5%;
+  background-color:rgba(246, 229, 174, 0.5);
   }
-  to {
-    transform: rotate(360deg);
+
+  button {
+    font-family: 'Rowdies', sans-serif;
+    font-size: 1em;
+    margin-top: 10px;
+    border: #3F2305;
+    background-color: RGBA(179, 242, 154, 0.8);
+    color: #3F2305;
+    padding: 5%;
+    box-shadow: 2px 2px 4px #3F2305;
+    }
+  button:hover{
+    cursor: pointer;
   }
-}
+  button:active{
+    background-color: #ED7D31;
+  }
